--- a/tests/config.yml
+++ b/tests/config.yml
@@ -3,19 +3,20 @@ parameters:
         'http://gcomputer.net/webservices/DailyDilbert': './tests/Fixtures/MockRequest.xml'
     mock_responses:
         'http://gcomputer.net/webservices/DailyDilbert': './tests/Fixtures/MockResponse.xml'
+    soap_options:
+        mock_requests: '%mock_requests%'
+        mock_responses: '%mock_responses%'
 
 services:
     Gamez\Psr\Log\TestLogger:
         public: true
     Freshcells\SoapClientBundle\SoapClient\SoapClient:
-        arguments: ['http://gcomputer.net/webservices/dilbert.asmx?WSDL']
+        arguments: ['http://gcomputer.net/webservices/dilbert.asmx?WSDL', '%soap_options%']
         public: true
         tags:
             - {name: fcse_soap.client}
         calls:
             - [ setDispatcher, [ '@event_dispatcher']]
-            - [ setMockRequests, ['%mock_requests%']]
-            - [ setMockResponses, ['%mock_responses%']]
 
 framework:
     secret: test
