--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@
 /.scrutinizer.yml   export-ignore
 /tests              export-ignore
 /docs               export-ignore
+/freshcells_soap_client_bundle_profiler.png
