--- a/tests/config.yml
+++ b/tests/config.yml
@@ -8,6 +8,10 @@ parameters:
         mock_responses: '%mock_responses%'
     soap_client_with mock_detector_soap_options:
         mock_requests: '%mock_requests%'
+    soap_client_with_custom_options_soap_options:
+        connection_timeout: 5
+        soap_version: 1
+        trace: false
 
 services:
     Gamez\Psr\Log\TestLogger:
@@ -32,6 +36,22 @@ services:
         calls:
             - [ setDispatcher, [ '@event_dispatcher']]
             - [ setMockResponses, [ ["@mock_response_detector"]]]
+    soap_client_without_custom_options:
+        class: Freshcells\SoapClientBundle\SoapClient\SoapClient
+        arguments: ['http://gcomputer.net/webservices/dilbert.asmx?WSDL']
+        public: true
+        tags:
+            - {name: fcse_soap.client}
+        calls:
+            - [ setDispatcher, [ '@event_dispatcher']]
+    soap_client_with_custom_options:
+        class: Freshcells\SoapClientBundle\SoapClient\SoapClient
+        arguments: ['http://gcomputer.net/webservices/dilbert.asmx?WSDL', '%soap_client_with_custom_options_soap_options%']
+        public: true
+        tags:
+            - {name: fcse_soap.client}
+        calls:
+            - [ setDispatcher, [ '@event_dispatcher']]
 
 framework:
     secret: test
