--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ dist: trusty
 language: php
 
 php:
-  - 7.1
   - 7.2
   - 7.3
+  - 7.4
 
 # This triggers builds to run on the new TravisCI infrastructure.
 # See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
@@ -15,13 +15,16 @@ cache:
   directories:
     - $HOME/.composer/cache
 
-matrix:
-  include:
-    - php: 7.1
-      env: 'COMPOSER_FLAGS="--prefer-stable --prefer-lowest"'
+env:
+  - COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_VERSION=^3.4
+  - COMPOSER_FLAGS="" SYMFONY_VERSION=^3.4
+  - COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_VERSION=^4.3
+  - COMPOSER_FLAGS="" SYMFONY_VERSION=^4.3
+  - COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_VERSION=^5.0
+  - COMPOSER_FLAGS="" SYMFONY_VERSION=^5.0
 
 before_script:
-  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
+  - travis_retry composer require --no-interaction --prefer-dist ${COMPOSER_FLAGS} symfony/config:${SYMFONY_VERSION} symfony/dependency-injection:${SYMFONY_VERSION} symfony/event-dispatcher:${SYMFONY_VERSION} symfony/http-kernel:${SYMFONY_VERSION}
 
 script:
   - vendor/bin/phpcs --standard=psr2 src/
