--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ cache:
 env:
   - COMPOSER_FLAGS="--prefer-lowest" SYMFONY_VERSION=^3.4
   - COMPOSER_FLAGS="" SYMFONY_VERSION=^3.4
+  - COMPOSER_FLAGS="--prefer-lowest" SYMFONY_VERSION=^4.3
   - COMPOSER_FLAGS="" SYMFONY_VERSION=^4.3
   - COMPOSER_FLAGS="--prefer-lowest" SYMFONY_VERSION=^5.0
   - COMPOSER_FLAGS="" SYMFONY_VERSION=^5.0
