--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require": {
         "php": "^7.2",
         "ext-soap": "*",
-        "ramsey/uuid": "^3.7",
+        "ramsey/uuid": "^3.7 || ^4",
         "symfony/config": "^3.4 || ^4.3 || ^5.0",
         "symfony/dependency-injection": "^3.4 || ^4.3 || ^5.0",
         "symfony/event-dispatcher": "^3.4 || ^4.3 || ^5.0",
