--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ env:
 
 before_script:
   - travis_retry composer require --no-interaction ${COMPOSER_FLAGS} symfony/browser-kit:${SYMFONY_VERSION} symfony/config:${SYMFONY_VERSION} symfony/dependency-injection:${SYMFONY_VERSION} symfony/event-dispatcher:${SYMFONY_VERSION} symfony/http-kernel:${SYMFONY_VERSION}
+  - phpenv config-rm xdebug.ini
 
 script:
   - vendor/bin/phpcs --standard=psr2 src/
