--- a/composer.json
+++ b/composer.json
@@ -24,17 +24,17 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": "^7.4",
         "ext-soap": "*",
         "ramsey/uuid": "^3.7 || ^4",
+        "psr/log": "^1.1",
         "symfony/config": "^3.4 || ^4.3 || ^5.0",
         "symfony/dependency-injection": "^3.4 || ^4.3 || ^5.0",
         "symfony/event-dispatcher": "^3.4 || ^4.3 || ^5.0",
         "symfony/http-kernel": "^3.4 || ^4.3 || ^5.1.5"
     },
     "require-dev": {
-        "gamez/psr-testlogger": "^2.0",
-        "phpunit/phpunit": "^7",
+        "phpunit/phpunit": "^8",
         "squizlabs/php_codesniffer": "^3.5",
         "symfony/browser-kit": "^3.4 || ^4.3 || ^5.0",
         "symfony/debug-bundle": "^3.4 || ^4.3 || ^5.0",
@@ -60,7 +60,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-main": "1.8-dev"
+            "dev-main": "2.0-dev"
         }
     },
     "config": {
