--- a/tests/config.yml
+++ b/tests/config.yml
@@ -16,7 +16,7 @@ parameters:
         trace: false
 
 services:
-    Gamez\Psr\Log\TestLogger:
+    Psr\Log\Test\TestLogger:
         public: true
     Freshcells\SoapClientBundle\SoapClient\SoapClient:
         arguments: ['http://gcomputer.net/webservices/dilbert.asmx?WSDL', '%soap_options%']
@@ -70,4 +70,4 @@ framework:
     test: true
 
 freshcells_soap_client:
-    logger: Gamez\Psr\Log\TestLogger
+    logger: Psr\Log\Test\TestLogger
