--- a/composer.json
+++ b/composer.json
@@ -28,20 +28,20 @@
         "ext-soap": "*",
         "ramsey/uuid": "^3.7 || ^4",
         "psr/log": "^1.1",
-        "symfony/config": "^3.4 || ^4.3 || ^5.0",
-        "symfony/dependency-injection": "^3.4 || ^4.3 || ^5.0",
-        "symfony/event-dispatcher": "^3.4 || ^4.3 || ^5.0",
-        "symfony/http-kernel": "^3.4 || ^4.3 || ^5.1.5"
+        "symfony/config": "^4.3 || ^5.0",
+        "symfony/dependency-injection": "^4.3 || ^5.0",
+        "symfony/event-dispatcher": "^4.3 || ^5.0",
+        "symfony/http-kernel": "^4.3 || ^5.1.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^8",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/browser-kit": "^3.4 || ^4.3 || ^5.0",
-        "symfony/debug-bundle": "^3.4 || ^4.3 || ^5.0",
-        "symfony/framework-bundle": "^3.4 || ^4.3 || ^5.0",
-        "symfony/phpunit-bridge": "^3.4 || ^4.3 || ^5.0",
-        "symfony/web-profiler-bundle": "^3.4 || ^4.3 || ^5.0",
-        "symfony/yaml": "^3.4 || ^4.3 || ^5.0"
+        "symfony/browser-kit": "^4.3 || ^5.0",
+        "symfony/debug-bundle": "^4.3 || ^5.0",
+        "symfony/framework-bundle": "^4.3 || ^5.0",
+        "symfony/phpunit-bridge": "^4.3 || ^5.0",
+        "symfony/web-profiler-bundle": "^4.3 || ^5.0",
+        "symfony/yaml": "^4.3 || ^5.0"
     },
     "autoload": {
         "psr-4": {
