allow newer psr/log versions #24

--- a/tests/config.yml
+++ b/tests/config.yml
@@ -16,7 +16,7 @@ parameters:
         trace: false
 
 services:
-    Psr\Log\Test\TestLogger:
+    ColinODell\PsrTestLogger\TestLogger:
         public: true
     Freshcells\SoapClientBundle\SoapClient\SoapClient:
         arguments: ['http://gcomputer.net/webservices/dilbert.asmx?WSDL', '%soap_options%']
@@ -70,4 +70,4 @@ framework:
     test: true
 
 freshcells_soap_client:
-    logger: Psr\Log\Test\TestLogger
+    logger: ColinODell\PsrTestLogger\TestLogger
