--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,14 @@
         "php": "^7.4 || ^8.0",
         "ext-soap": "*",
         "ramsey/uuid": "^3.7 || ^4",
-        "psr/log": "^1.1",
+        "psr/log": "^1.1 || ^2 || ^3",
         "symfony/config": "^4.3 || ^5.0",
         "symfony/dependency-injection": "^4.3 || ^5.0",
         "symfony/event-dispatcher": "^4.3 || ^5.0",
         "symfony/http-kernel": "^4.3 || ^5.1.5"
     },
     "require-dev": {
+        "colinodell/psr-testlogger": "^1.0",
         "phpunit/phpunit": "^8",
         "squizlabs/php_codesniffer": "^3.5",
         "symfony/browser-kit": "^4.3 || ^5.0",
