--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -82,3 +82,19 @@ jobs:
                   composer require --no-update --dev symfony/framework-bundle=$SYMFONY_VERSION symfony/yaml=$SYMFONY_VERSION
                   composer update --prefer-dist --no-interaction --no-ansi --no-progress
                   php vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+
+    tests-php-8-1-symfony-6:
+        runs-on: ubuntu-latest
+        env:
+            SYMFONY_VERSION: 6.0.*
+        steps:
+            - uses: actions/checkout@v2
+            - uses: shivammathur/setup-php@v2
+              with:
+                  php-version: '8.1'
+            - name: PHPUnit
+              run: |
+                  composer require --no-update symfony/config=$SYMFONY_VERSION symfony/http-kernel=$SYMFONY_VERSION symfony/dependency-injection=$SYMFONY_VERSION symfony/options-resolver=$SYMFONY_VERSION
+                  composer require --no-update --dev symfony/framework-bundle=$SYMFONY_VERSION symfony/yaml=$SYMFONY_VERSION
+                  composer update --prefer-dist --no-interaction --no-ansi --no-progress
+                  php vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
