--- a/composer.json
+++ b/composer.json
@@ -28,21 +28,21 @@
         "ext-soap": "*",
         "ramsey/uuid": "^3.7 || ^4",
         "psr/log": "^1.1 || ^2 || ^3",
-        "symfony/config": "^4.3 || ^5.0",
-        "symfony/dependency-injection": "^4.3 || ^5.0",
-        "symfony/event-dispatcher": "^4.3 || ^5.0",
-        "symfony/http-kernel": "^4.3 || ^5.1.5"
+        "symfony/config": "^4.3 || ^5.0 || ^6.0",
+        "symfony/dependency-injection": "^4.3 || ^5.0 || ^6.0",
+        "symfony/event-dispatcher": "^4.3 || ^5.0 || ^6.0",
+        "symfony/http-kernel": "^4.3 || ^5.1.5 || ^6.0"
     },
     "require-dev": {
         "colinodell/psr-testlogger": "^1.0",
         "phpunit/phpunit": "^8",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/browser-kit": "^4.3 || ^5.0",
-        "symfony/debug-bundle": "^4.3 || ^5.0",
-        "symfony/framework-bundle": "^4.3 || ^5.0",
-        "symfony/phpunit-bridge": "^4.3 || ^5.0",
-        "symfony/web-profiler-bundle": "^4.3 || ^5.0",
-        "symfony/yaml": "^4.3 || ^5.0"
+        "symfony/browser-kit": "^4.3 || ^5.0 || ^6.0",
+        "symfony/debug-bundle": "^4.3 || ^5.0 || ^6.0",
+        "symfony/framework-bundle": "^4.3 || ^5.0 || ^6.0",
+        "symfony/phpunit-bridge": "^4.3 || ^5.0 || ^6.0",
+        "symfony/web-profiler-bundle": "^4.3 || ^5.0 || ^6.0",
+        "symfony/yaml": "^4.3 || ^5.0 || ^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -61,7 +61,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-main": "2.2-dev"
+            "dev-main": "2.3-dev"
         }
     },
     "config": {
