--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,91 +10,40 @@ jobs:
     coding-style:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v4
             - uses: shivammathur/setup-php@v2
               with:
-                  php-version: '7.4'
+                  php-version: '8.1'
             - name: php-cs-fixer
               run: |
                   composer install -n --prefer-dist
                   composer check-style
-    tests-php-7-4-symfony-4-3:
+    tests:
+        strategy:
+            matrix:
+                php: [ 8.1, 8.2, 8.3 ]
+                symfony: [ 5.4, 6.4, 7.0 ]
+                exclude:
+                    - php: 8.1
+                      symfony: 7.0
         runs-on: ubuntu-latest
         env:
-            SYMFONY_VERSION: 4.3.*
+            SYMFONY_VERSION: ${{ matrix.symfony }}.*
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v4
+              with:
+                  fetch-depth: 2
             - uses: shivammathur/setup-php@v2
               with:
-                  php-version: '7.4'
+                  php-version: ${{ matrix.php }}
             - name: PHPUnit
               run: |
                   composer require --no-update symfony/config=$SYMFONY_VERSION symfony/http-kernel=$SYMFONY_VERSION symfony/dependency-injection=$SYMFONY_VERSION symfony/options-resolver=$SYMFONY_VERSION
                   composer require --no-update --dev symfony/framework-bundle=$SYMFONY_VERSION symfony/yaml=$SYMFONY_VERSION
                   composer update --prefer-dist --no-interaction --no-ansi --no-progress
                   php vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-    tests-php-7-4-symfony-5-0:
-        runs-on: ubuntu-latest
-        env:
-            SYMFONY_VERSION: 5.0.*
-        steps:
-            - uses: actions/checkout@v2
-            - uses: shivammathur/setup-php@v2
-              with:
-                  php-version: '7.4'
-            - name: PHPUnit
+            - name: Upload code coverage scrutinizer
+              if: ${{ matrix.php == '8.1' && matrix.symfony == '5.4' }}
               run: |
-                  composer require --no-update symfony/config=$SYMFONY_VERSION symfony/http-kernel=$SYMFONY_VERSION symfony/dependency-injection=$SYMFONY_VERSION symfony/options-resolver=$SYMFONY_VERSION
-                  composer require --no-update --dev symfony/framework-bundle=$SYMFONY_VERSION symfony/yaml=$SYMFONY_VERSION
-                  composer update --prefer-dist --no-interaction --no-ansi --no-progress
-                  php vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-            -   name: Upload code coverage scrutinizer
-                run: |
-                    wget https://scrutinizer-ci.com/ocular.phar
-                    php ocular.phar code-coverage:upload --format=php-clover coverage.clover
-    tests-php-8-0-symfony-5-3:
-        runs-on: ubuntu-latest
-        env:
-            SYMFONY_VERSION: 5.3.*
-        steps:
-            - uses: actions/checkout@v2
-            - uses: shivammathur/setup-php@v2
-              with:
-                  php-version: '8.0'
-            - name: PHPUnit
-              run: |
-                  composer require --no-update symfony/config=$SYMFONY_VERSION symfony/http-kernel=$SYMFONY_VERSION symfony/dependency-injection=$SYMFONY_VERSION symfony/options-resolver=$SYMFONY_VERSION
-                  composer require --no-update --dev symfony/framework-bundle=$SYMFONY_VERSION symfony/yaml=$SYMFONY_VERSION
-                  composer update --prefer-dist --no-interaction --no-ansi --no-progress
-                  php vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-    tests-php-8-1-symfony-5-4:
-        runs-on: ubuntu-latest
-        env:
-            SYMFONY_VERSION: 5.4.*
-        steps:
-            - uses: actions/checkout@v2
-            - uses: shivammathur/setup-php@v2
-              with:
-                  php-version: '8.1'
-            - name: PHPUnit
-              run: |
-                  composer require --no-update symfony/config=$SYMFONY_VERSION symfony/http-kernel=$SYMFONY_VERSION symfony/dependency-injection=$SYMFONY_VERSION symfony/options-resolver=$SYMFONY_VERSION
-                  composer require --no-update --dev symfony/framework-bundle=$SYMFONY_VERSION symfony/yaml=$SYMFONY_VERSION
-                  composer update --prefer-dist --no-interaction --no-ansi --no-progress
-                  php vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
-
-    tests-php-8-1-symfony-6:
-        runs-on: ubuntu-latest
-        env:
-            SYMFONY_VERSION: 6.0.*
-        steps:
-            - uses: actions/checkout@v2
-            - uses: shivammathur/setup-php@v2
-              with:
-                  php-version: '8.1'
-            - name: PHPUnit
-              run: |
-                  composer require --no-update symfony/config=$SYMFONY_VERSION symfony/http-kernel=$SYMFONY_VERSION symfony/dependency-injection=$SYMFONY_VERSION symfony/options-resolver=$SYMFONY_VERSION
-                  composer require --no-update --dev symfony/framework-bundle=$SYMFONY_VERSION symfony/yaml=$SYMFONY_VERSION
-                  composer update --prefer-dist --no-interaction --no-ansi --no-progress
-                  php vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
+                  composer global require scrutinizer/ocular
+                  php ~/.composer/vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
