ci: add symfony 8.0

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,12 @@ jobs:
         strategy:
             matrix:
                 php: [ 8.2, 8.3, 8.4 ]
-                symfony: [ 5.4, 6.4, 7.4 ]
+                symfony: [ 5.4, 6.4, 7.4, 8.0 ]
+                exclude:
+                    - php: 8.2
+                      symfony: 8.0
+                    - php: 8.3
+                      symfony: 8.0
         runs-on: ubuntu-latest
         env:
             SYMFONY_VERSION: ${{ matrix.symfony }}.*
