--- a/composer.json
+++ b/composer.json
@@ -28,20 +28,20 @@
         "ext-soap": "*",
         "ramsey/uuid": "^3.7 || ^4",
         "psr/log": "^1.1 || ^2 || ^3",
-        "symfony/config": "^5.4 || ^6.4 || ^7.0",
-        "symfony/dependency-injection": "^5.4 || ^6.4 || ^7.0",
-        "symfony/event-dispatcher": "^5.4 || ^6.4 || ^7.0",
-        "symfony/http-kernel": "^5.4 || ^6.4 || ^7.0"
+        "symfony/config": "^5.4 || ^6.4 || ^7.0 || ^8.0",
+        "symfony/dependency-injection": "^5.4 || ^6.4 || ^7.0 || ^8.0",
+        "symfony/event-dispatcher": "^5.4 || ^6.4 || ^7.0 || ^8.0",
+        "symfony/http-kernel": "^5.4 || ^6.4 || ^7.0 || ^8.0"
     },
     "require-dev": {
         "colinodell/psr-testlogger": "^1.3",
         "phpunit/phpunit": "^9",
         "squizlabs/php_codesniffer": "^3.10",
-        "symfony/browser-kit": "^5.4 || ^6.4 || ^7.0",
-        "symfony/debug-bundle": "^5.4 || ^6.4 || ^7.0",
-        "symfony/framework-bundle": "^5.4 || ^6.4 || ^7.0",
-        "symfony/phpunit-bridge": "^5.4 || ^6.4 || ^7.0",
-        "symfony/web-profiler-bundle": "^5.4 || ^6.4 || ^7.0",
+        "symfony/browser-kit": "^5.4 || ^6.4 || ^7.0 || ^8.0",
+        "symfony/debug-bundle": "^5.4 || ^6.4 || ^7.0 || ^8.0",
+        "symfony/framework-bundle": "^5.4 || ^6.4 || ^7.0 || ^8.0",
+        "symfony/phpunit-bridge": "^5.4 || ^6.4 || ^7.0 || ^8.0",
+        "symfony/web-profiler-bundle": "^5.4 || ^6.4 || ^7.0 || ^8.0",
         "symfony/yaml": "^5.4 || ^6.4 || ^7.0"
     },
     "autoload": {
