feat: Add PHP 8.5 compatibility for __doRequest method
PHP 8.5 changed the native SoapClient::__doRequest signature by:
- Adding typed parameters (string, int, bool)
- Adding a 6th parameter ($uriParserClass)
- Adding a return type (?string)

BREAKING CHANGE: Requires PHP 8.5+. Parameter $one_way renamed to $oneWay.

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     ],
     "require": {
-        "php": "^8.2",
+        "php": ">=8.5",
         "ext-soap": "*",
         "ramsey/uuid": "^3.7 || ^4",
         "psr/log": "^1.1 || ^2 || ^3",
