--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
             - uses: actions/checkout@v6
             - uses: shivammathur/setup-php@v2
               with:
-                  php-version: '8.2'
+                  php-version: '8.5'
             - name: php-cs-fixer
               run: |
                   composer install -n --prefer-dist
@@ -21,13 +21,8 @@ jobs:
     tests:
         strategy:
             matrix:
-                php: [ 8.2, 8.3, 8.4 ]
+                php: [ 8.5 ]
                 symfony: [ 5.4, 6.4, 7.4, 8.0 ]
-                exclude:
-                    - php: 8.2
-                      symfony: 8.0
-                    - php: 8.3
-                      symfony: 8.0
         runs-on: ubuntu-latest
         env:
             SYMFONY_VERSION: ${{ matrix.symfony }}.*
@@ -45,7 +40,7 @@ jobs:
                   composer update --prefer-dist --no-interaction --no-ansi --no-progress
                   php vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
             - name: Upload code coverage scrutinizer
-              if: ${{ matrix.php == '8.2' && matrix.symfony == '5.4' }}
+              if: ${{ matrix.php == '8.5' && matrix.symfony == '6.4' }}
               run: |
                   composer global require scrutinizer/ocular
                   php ~/.composer/vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover
